--- a/config.toml
+++ b/config.toml
@@ -1,5 +1,20 @@
-baseURL = "https://xyslion.github.io/blog/"
-languageCode = "en-us"
-title = "xyslion的笔记屋"
-theme = "ananke"
+# 主机名
+baseURL = 						"https://xyslion.github.io/blog/"
+# 语言编码
+languageCode = 					"zh-CN"
+# 默认的内容语言
+defaultContentLanguage = 		"zh-CN"
+# 标题
+title = 						"xyslion的笔记屋"
+# 主题
+theme =							"ananke"
+# 自动检测是否包含中文/日文/韩文，该参数会影响摘要和字数统计功能，建议设置为true
+hasCJKLanguage =                true
+# 若为 false，`Getting Started` 这样的英文标签将会被转换为 `getting-started`
+preserveTaxonomyNames =         true
+# 启用 Emoji; see emoji-cheat-sheet.com
+enableEmoji =                   true
+# 创建robots.txt，建议设置为true
+enableRobotsTXT =               true
+# 编译为html文件时所放的文件夹名称 
 publishDir = "docs"
