--- a/config.toml
+++ b/config.toml
@@ -1,9 +1,9 @@
 # 主机名
 baseURL = 						"https://xyslion.github.io/blog/"
 # 语言编码
-languageCode = 					"zh-CN"
+languageCode = 					"zh"
 # 默认的内容语言
-defaultContentLanguage = 		"zh-CN"
+defaultContentLanguage = 		"zh"
 # 标题
 title = 						"xyslion的笔记屋"
 # 主题
@@ -17,4 +17,28 @@ enableEmoji =                   true
 # 创建robots.txt，建议设置为true
 enableRobotsTXT =               true
 # 编译为html文件时所放的文件夹名称 
-publishDir = "docs"
+publishDir = 					"docs"
+SectionPagesMenu = 				"main"
+# this is set low for demonstrating with dummy content. Set to a higher numbe
+Paginate = 						3
+
+[sitemap]
+  changefreq = "monthly"
+  priority = 0.5
+  filename = "sitemap.xml"
+
+[params]
+  favicon = ""
+  description = "The last theme you'll ever need. Maybe."
+  facebook = ""
+  twitter = ""
+  instagram = ""
+  youtube = ""
+  github = ""
+  gitlab = ""
+  linkedin = ""
+  mastodon = ""
+  # choose a background color from any on this page: http://tachyons.io/docs/themes/skins/ and preface it with "bg-"
+  background_color_class = "bg-black"
+  featured_image = "/images/gohugo-default-sample-hero-image.jpg"
+  recent_posts_number = 2
